--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.2",
     "core-js": "^3.37.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -29,6 +30,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "openai": "^4.52.0",
     "path": "^0.12.7",
     "pdf-lib": "^1.16.0",
